--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.3",
+    "@types/react-slick": "^0.23.5",
     "@types/styled-components": "^5.1.10"
   }
 }
